[package]
name = "wasm-audio"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioWorkletGlobalScope",
    "AudioWorkletProcessor",
    "AudioWorkletNode",
    "AudioContext"
]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-threads", "--enable-bulk-memory"]