[package]
name = "wasm-audio"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "console",
    "AudioWorkletGlobalScope",
    "AudioWorkletProcessor",
    "AudioWorkletNode",
    "AudioContext",
] }
num_enum = "0.7"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-threads", "--enable-bulk-memory"]
